feature: 更新會員管理功能，新增電話唯一性業務邏輯檢查及密碼確認檢查，調整登入邏輯，將會員刪除改為會員停用邏輯